--- a/about.html
+++ b/about.html
@@ -2,14 +2,8 @@
 <html>
     <head>
         <title>사이트 소개</title>
-        <style>
-            nav {
-                background-color: darkcyan; font-size: 56px; text-align: center;
-            }
-            nav a {
-                color: white;
-            }
-        </style>
+        <link href="./practice.css" rel="stylesheet", type="text/css">
+        <script type="text/javascript" src="./whatTimeisit.js">        </script>
 
     </head>
     <body>
@@ -24,6 +18,8 @@
 
         <p>프로젝트</p>
         <a href="./index.html">Home</a>
+        <button onclick="whatTimeisit()">현재시각</button>
+
         <img src="./images/noita-digital-QZX8jbK1xEw-unsplash.jpg" width="400">
 
     </body>
