--- a/blog_list.html
+++ b/blog_list.html
@@ -2,14 +2,7 @@
 <html>
     <head>
         <title>블로그</title>
-        <style>
-            nav {
-                background-color: darkcyan; font-size: 56px; text-align: center;
-            }
-            nav a {
-                color: white;
-            }
-        </style>
+        <link href="./practice.css" rel="stylesheet", type="text/css">
 
     </head>
     <body>
